--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "fintuity-editor",
   "version": "1.0.0",
-  "description": "Fintuity's build for CKEditor",
+  "description": "Custom CKEditor5 build for Fintuity",
   "main": "build/index.js",
   "scripts": {
+    "dev": "webpack --watch --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/jgluhov/FintuityEditor/issues"
   },
-  "homepage": "https://github.com/jgluhov/FintuityEditor#readme"
+  "homepage": "https://github.com/jgluhov/FintuityEditor#readme",
+  "devDependencies": {
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
