--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack --watch --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@ckeditor/ckeditor5-dev-utils": "^25.4.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.5",
+    "np": "^7.5.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
