--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack --watch --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest",
     "prepublish": "npm run build",
     "release": "np"
   },
@@ -58,7 +58,10 @@
   "devDependencies": {
     "@ckeditor/ckeditor5-dev-utils": "^25.4.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.5",
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
     "np": "^7.5.0",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
